se agregó endpoint de prueba al formulario de ejemplo 5

--- a/Ejemplo5/index.html
+++ b/Ejemplo5/index.html
@@ -15,7 +15,7 @@
 		<h1>Formulario Comida Mexicana</h1>
 		<h2>Pide tu orden</h2>
 
-			<form name="myForm" action="" method="GET"> <!--se puede utilizar RequestBin para simular el envio de datos, un POST empaqueta los datos al proceso se le llama serializar. UN FORM NO HACE PUT NI DELETE-->
+			<form name="myForm" action="https://engfsyr33r74.x.pipedream.net" method="POST"> <!--se puede utilizar RequestBin para simular el envio de datos, un POST empaqueta los datos al proceso se le llama serializar. UN FORM NO HACE PUT NI DELETE-->
 				<div>
 					<label>Platillo  </label><select name="platillo" required="true">
 						<option value="chilaquiles">Chilaquiles</option>
